feat: build before deploy

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "cross-env NODE_ENV=production webpack --mode production",
     "serve": "cross-env NODE_ENV=development webpack serve --open",
     "start": "cross-env NODE_ENV=development webpack serve --open",
-    "deploy": "gh-pages -d dist"
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "author": "Alexander Konovalov <shuryak@protonmail.com>",
   "license": "GPL-3.0-or-later",
